tests/baselines/reference/throwType_function_parameter.errors.txt
tests/cases/compiler/throwType_function_parameter.ts(2,24): error TS2345: Argument of type 'number' is not assignable to parameter of type 'never'.
tests/cases/compiler/throwType_function_parameter.ts(2,24): error TS2794: Type instantiated results in a throw type saying: 
    No zero


==== tests/cases/compiler/throwType_function_parameter.ts (2 errors) ====
    function checkParameterPosition<T extends number>(y: T extends 1234 ? throw 'No zero' : T) { }
    checkParameterPosition(1234)
                           ~~~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'never'.
                           ~~~~
!!! error TS2794: Type instantiated results in a throw type saying: 
!!! error TS2794:     No zero
    checkParameterPosition(12345678)
    